Insights Release 10.0 changes (#372)
Co-authored-by: InsightsJenkinsBot <Jenkins@cogdevops.com>