@@ -15,10 +15,10 @@
  ******************************************************************************/
 package com.cognizant.devops.platformservice.masterdata;
 
-import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.nio.file.Files;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -27,87 +27,113 @@ import java.util.List;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.annotation.ComponentScan;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.core.io.Resource;
 
 import com.cognizant.devops.platformcommons.constants.PlatformServiceConstants;
 import com.cognizant.devops.platformcommons.core.util.ValidationUtils;
 import com.cognizant.devops.platformcommons.dal.neo4j.GraphDBHandler;
 import com.cognizant.devops.platformcommons.exception.InsightsCustomException;
 import com.cognizant.devops.platformdal.masterdata.MasterDataDAL;
+import com.cognizant.devops.platformservice.security.config.saml.ResourceLoaderService;
 import com.google.gson.Gson;
 import com.google.gson.JsonSyntaxException;
 import com.google.gson.reflect.TypeToken;
 
+@ComponentScan(basePackages = { "com.cognizant.devops" })
+@Configuration
 public class ProcessMasterData {
 
 	private static Logger log = LogManager.getLogger(ProcessMasterData.class);
 	private static final String JSON_FILE_EXTENSION = "json";
 	MasterDataDAL masterDataDal = new MasterDataDAL();
 	List<String> queryList = new ArrayList<>();
-	
-	public static final List<String> MASTER_FILE_LIST = Collections.unmodifiableList(Arrays.asList("agent.json","ROI_Tools.json"
-			,"ScheduledTask.json","workflow.json","FileManagement.json"));
+
+	@Autowired
+	ResourceLoaderService resourceLoaderService;
+
+	@Value("classpath:masterdata/*")
+	Resource[] resources;
+
+	public static final List<String> MASTER_FILE_LIST = Collections.unmodifiableList(Arrays.asList("agent.json",
+			"ROI_Tools.json", "ScheduledTask.json", "workflow.json", "FileManagement.json"));
 
 	/**
 	 * Load json file for masterdata query processing
 	 * 
 	 * @return masterDataFileCount
-	 * @throws Exception 
+	 * @throws Exception
 	 */
 	public int executeMasterDataProcessing() throws Exception {
 		int masterDataFileCount = 0;
-		File queryFolderPath;
-		
-		try {
-			
-			queryFolderPath = new File(getClass().getClassLoader().getResource("masterdata").getFile());
-
-			for (File masterDataFile : queryFolderPath.listFiles()) {
-				if (hasJsonFileExtension(masterDataFile.getName()) &&masterDataFile.isFile() && MASTER_FILE_LIST.contains(masterDataFile.getName()) ) { // this line removes other directories/folders
-						String queryJosn = new String(Files.readAllBytes(masterDataFile.toPath()));
-						String validatedstr = ValidationUtils.cleanXSS(queryJosn.replace(PlatformServiceConstants.LF, PlatformServiceConstants.EMPTY).replace(PlatformServiceConstants.CR, PlatformServiceConstants.EMPTY).replace(PlatformServiceConstants.TAB, PlatformServiceConstants.EMPTY));
-						queryList.add(validatedstr);
-				}else {
-					throw new InsightsCustomException("Not a valid master data file ");
+		try {			
+			for (final Resource masterDataFile : resources) {
+				if (hasJsonFileExtension(masterDataFile.getFilename())
+						&& MASTER_FILE_LIST.contains(masterDataFile.getFilename())) { // this line removes other
+																						// directories/folders
+					InputStream masterDataFileInputStream = masterDataFile.getInputStream();
+					String queryJson = new String(masterDataFileInputStream.readAllBytes(), StandardCharsets.UTF_8);
+					String validatedstr = ValidationUtils
+							.cleanXSS(queryJson.replace(PlatformServiceConstants.LF, PlatformServiceConstants.EMPTY)
+									.replace(PlatformServiceConstants.CR, PlatformServiceConstants.EMPTY)
+									.replace(PlatformServiceConstants.TAB, PlatformServiceConstants.EMPTY));
+					queryList.add(validatedstr);
+				} else {
+					throw new InsightsCustomException(masterDataFile.getFilename() + " <= Not a valid master data file ");
 				}
 			}
-			
+
 			for (String queryJsonStr : queryList) {
-				String validatedstr = ValidationUtils.cleanXSS(queryJsonStr.replace(PlatformServiceConstants.LF, PlatformServiceConstants.EMPTY).replace(PlatformServiceConstants.CR, PlatformServiceConstants.EMPTY).replace(PlatformServiceConstants.TAB, PlatformServiceConstants.EMPTY));
+				String validatedstr = ValidationUtils
+						.cleanXSS(queryJsonStr.replace(PlatformServiceConstants.LF, PlatformServiceConstants.EMPTY)
+								.replace(PlatformServiceConstants.CR, PlatformServiceConstants.EMPTY)
+								.replace(PlatformServiceConstants.TAB, PlatformServiceConstants.EMPTY));
 				processMasterDataConfiguration(validatedstr);
 			}
 		} catch (Exception e) {
-			log.error("Error While execution master data query ",e);
+			log.error("Error While execution master data query ", e);
 			throw e;
 		}
 		return masterDataFileCount;
 	}
-	
+
 	/**
 	 * Execute Trigger statements during startup
+	 * 
 	 * @return triggerResponse
-	 * @throws InsightsCustomException 
-	 * @throws Exception 
+	 * @throws InsightsCustomException
+	 * @throws Exception
 	 */
 	public String executeTriggerStatement() throws InsightsCustomException {
 		String response = "";
-		File triggerStatementFile = new File(getClass().getClassLoader().getResource("triggerStatements.json").getFile());
-		try{
-			String template = new String(Files.readAllBytes(triggerStatementFile.toPath())).replace(PlatformServiceConstants.LF, PlatformServiceConstants.EMPTY).replace(PlatformServiceConstants.CR, PlatformServiceConstants.EMPTY).replace(PlatformServiceConstants.TAB, PlatformServiceConstants.EMPTY);
+		try {
+			Resource resource = resourceLoaderService.getResource("classpath:triggerStatements.json");
+			InputStream triggerStatementsInputStream = resource.getInputStream();
+//			Path path = triggerStatementFile.toPath();
+//			log.debug("Trigger Path {}", path.getFileName());
+			String template = new String(triggerStatementsInputStream.readAllBytes(), StandardCharsets.UTF_8)
+					.replace(PlatformServiceConstants.LF, PlatformServiceConstants.EMPTY)
+					.replace(PlatformServiceConstants.CR, PlatformServiceConstants.EMPTY)
+					.replace(PlatformServiceConstants.TAB, PlatformServiceConstants.EMPTY);
+
 			String validatedstr = ValidationUtils.cleanXSS(template);
 			GraphDBHandler dbHandler = new GraphDBHandler();
 			response = dbHandler.executeCypherQueryRaw(validatedstr);
-			log.debug(response);	
+			log.debug(response);
 		} catch (IOException e) {
 			response = "Unable to read the trigger statement file while creating UUID.";
-			log.error(" IOException While executeTriggerStatement {} {} ",response, e.getMessage());
+			log.error(" IOException While executeTriggerStatement {} {} ", response, e.getMessage());
 			throw new InsightsCustomException(response);
 		} catch (InsightsCustomException e) {
 			response = "Failed to execute the trigger query while creating UUID.";
-			log.error("InsightsCustomException while  executeTriggerStatement {} {} ",response, e.getMessage());
+			log.error("InsightsCustomException while  executeTriggerStatement {} {} ", response, e.getMessage());
 			throw new InsightsCustomException(response);
-		}  catch (Exception e) {
-			response  = "Error while creating UUID trigger.";
-			log.error("Exception with executeTriggerStatement {} {} ",response, e.getMessage());
+		} catch (Exception e) {
+			response = "Error while creating UUID trigger.";
+			log.error("Exception with executeTriggerStatement {} {} ", response, e.getMessage());
 			throw new InsightsCustomException(response);
 		}
 		return response;
@@ -134,16 +160,17 @@ public class ProcessMasterData {
 	 * 
 	 * @param masterDataFile
 	 * @return
-	 * @throws Exception 
+	 * @throws Exception
 	 */
 	private Boolean processMasterDataConfiguration(String queryJosn) throws Exception {
-		try {	
-				String validatedstr = ValidationUtils.cleanXSS(queryJosn);
-				List<MasterDataQueryModel> masterDataQueryModels =  new Gson().fromJson(validatedstr,
-						new TypeToken<List<MasterDataQueryModel>>() {}.getType());
-				for (MasterDataQueryModel masterDataQueryModel : masterDataQueryModels) {
-					processQuery(masterDataQueryModel);
-				}
+		try {
+			String validatedstr = ValidationUtils.cleanXSS(queryJosn);
+			List<MasterDataQueryModel> masterDataQueryModels = new Gson().fromJson(validatedstr,
+					new TypeToken<List<MasterDataQueryModel>>() {
+					}.getType());
+			for (MasterDataQueryModel masterDataQueryModel : masterDataQueryModels) {
+				processQuery(masterDataQueryModel);
+			}
 		} catch (FileNotFoundException e) {
 			log.error(e);
 			log.error("Master data file not found.", e);
@@ -154,10 +181,10 @@ public class ProcessMasterData {
 			log.error(ex);
 			log.error("Error while processing string is not as per expected format {}", ex.getMessage());
 			return Boolean.FALSE;
-		}catch (Exception ex) {
+		} catch (Exception ex) {
 			log.error(ex);
 			log.error("Exception while processing ", ex);
-			throw ex ;
+			throw ex;
 		}
 		return Boolean.TRUE;
 	}
@@ -167,10 +194,11 @@ public class ProcessMasterData {
 	 * database
 	 * 
 	 * @param masterDataQueryModel
-	 * @throws Exception 
+	 * @throws Exception
 	 */
 	private void processQuery(MasterDataQueryModel masterDataQueryModel) throws Exception {
-			log.debug("masterDataQueryModel {}", masterDataQueryModel);
-			masterDataDal.processMasterDataQuery(masterDataQueryModel.getSqlQuery());
+		log.debug("masterDataQueryModel {}", masterDataQueryModel);
+		masterDataDal.processMasterDataQuery(masterDataQueryModel.getSqlQuery());
 	}
+
 }
